--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" src="./src/assets/Logo-TN-noir.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thien Nguyen Developpeur Web & Mobile</title>
   </head>
